# opengl-examples2

./: .gitignore  README.md  opengl-examples2.cabal  stack.yaml
gallery/: RME.md
src/: BianchiPinkall.hs  BianchiPinkallColor.hs  Bilunabirotunda.hs  CompoundFiveOctahedra.hs  CompoundFiveTetrahedra.hs  CompoundTwoGreatIcosahedra.hs  CompoundTwoIcosahedra.hs  ConicalSpiral.hs  Cubinder.hs  CyclideColor.hs  DaVinciSphere.hs  HorseSaddle.hs  Icosahedron.hs  IcosahedronInOctahedron.hs  LinkedCyclides.hs  LinkedCyclides2.hs  LinkedCyclides3.hs  SphericalIcosahedron.hs  ToroidalHelix.hs  TruncatedTesseract.hs  TwentyCones.hs
src/BianchiPinkall/: Data.hs  DataColor.hs
src/Bilunabirotunda/: Data.hs
src/CompoundFiveOctahedra/: Data.hs
src/CompoundFiveTetrahedra/: Data.hs
src/CompoundTwoGreatIcosahedra/: Data.hs
src/CompoundTwoIcosahedra/: Data.hs
src/ConicalSpiral/: Data.hs
src/Cubinder/: Data.hs
src/Cyclide/: DataColor.hs
src/DaVinciSphere/: Data.hs
src/HorseSaddle/: Data.hs
src/Icosahedron/: Data.hs
src/IcosahedronInOctahedron/: Data.hs
src/LinkedCyclides/: Data.hs  Data2.hs  Data3.hs
src/SphericalIcosahedron/: Data.hs
src/ToroidalHelix/: Data.hs
src/TruncatedTesseract/: Data.hs
src/Utils/: ConeMesh.hs  Functions4D.hs  SphericalTriangle.hs  Triplets.hs
src/Utils/Colors/: Color.hs  Palettes.hs
