name:                opengl-examples2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/opengl-examples2#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          example@example.com
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils.Colors.Color
                     , Utils.Colors.Palettes
                     , Utils.ConeMesh
                     , BianchiPinkall
                     , BianchiPinkallColor
                     , BianchiPinkall.Data
                     , BianchiPinkall.DataColor
                     , TwentyCones
                     , Cubinder.Data
                     , Cubinder
                     , DaVinciSphere.Data
                     , DaVinciSphere
                     , Cyclide.DataColor
                     , CyclideColor
                     , LinkedCyclides.Data
                     , LinkedCyclides
                     , CompoundFiveTetrahedra.Data
                     , CompoundFiveTetrahedra
                     , Utils.Triplets
                     , ConicalSpiral.Data
                     , ConicalSpiral
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , containers
                    --  , hip
                     , directory
                     , colour
                     , palette
                    --  , ilist
                     , linear
                     , extra
                    --  , split
                    --  , permutation
                    --  , combinat
                    --  , HaskellForMaths
                     , numeric-tools
                     , vector
                     , lens
                     , array
  default-language:    Haskell2010
  ghc-options:        -Wall

source-repository head
  type:     git
  location: https://github.com/stla/opengl-examples2
